--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 
 /* --- CSS Variables (Marketplace Theme) --- */
 :root {
-    --bg-white: #f8f8f8;
-    --bg-light-gray: #f8f8f8;
+    --bg-white: #d9534f;
+    --bg-light-gray: #d9534f;
     --font-promo-red: #d9534f;
     --text-dark: #333333;
     --text-light: #777777;
