--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     --font-promo-red: #d9534f;
     --text-dark: #333333;
     --text-light: #777777;
-    --border-color: #E0E0E0;
+    --border-color: #7B68EE;
     --font-main: 'Roboto', sans-serif;
     --shadow-color: #f8f8f8;
     --border-radius: 8px;
