--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body {
     color: var(--text-dark);
     display: flex;
     flex-direction: column;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    /*box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);*/
     transition: box-shadow 0.3s, transform 0.3s;
 }
 .product-card:hover {
