--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 /* --- CSS Variables (Marketplace Theme) --- */
 :root {
     --bg-white: #FFFFFF;
-    --bg-light-gray: #f8f8f8;
+    --bg-light-gray: #FFFFFF;
     --font-promo-red: #d9534f;
     --text-dark: #333333;
     --text-light: #777777;
